Creado mediante Colaboratory

--- a/Semana 3/ 3_2 Clasificación_de_imágenes_cáncer_mediante_programación_lineal.ipynb
+++ b/Semana 3/ 3_2 Clasificación_de_imágenes_cáncer_mediante_programación_lineal.ipynb
@@ -62,21 +62,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d758ae45-3e36-4103-d9e5-f866222171aa"
+        "outputId": "965a4cc7-edd0-42f5-af40-54ee1defa644"
       },
       "source": [
         "!pip install --upgrade --user ortools\r\n",
-        "#https://developers.google.com/optimization/reference/python/linear_solver/pywraplp"
+        "#https://developers.google.com/optimization/lp/glop"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already up-to-date: ortools in /root/.local/lib/python3.6/site-packages (8.1.8487)\n",
-            "Requirement already satisfied, skipping upgrade: protobuf>=3.14.0 in /root/.local/lib/python3.6/site-packages (from ortools) (3.14.0)\n",
             "Requirement already satisfied, skipping upgrade: absl-py>=0.11 in /root/.local/lib/python3.6/site-packages (from ortools) (0.11.0)\n",
-            "Requirement already satisfied, skipping upgrade: six>=1.9 in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.14.0->ortools) (1.15.0)\n"
+            "Requirement already satisfied, skipping upgrade: protobuf>=3.14.0 in /root/.local/lib/python3.6/site-packages (from ortools) (3.14.0)\n",
+            "Requirement already satisfied, skipping upgrade: six in /usr/local/lib/python3.6/dist-packages (from absl-py>=0.11->ortools) (1.15.0)\n"
           ],
           "name": "stdout"
         }
@@ -104,7 +104,7 @@
         "# para especificar que queremos las graficas en linea sin necesidad de usar plt.show()\n",
         "%matplotlib inline      "
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -131,10 +131,7 @@
         "id": "Iq05IKTtxDJV"
       },
       "source": [
-        "#Modificada por mi\n",
-        "\n",
-        "\n",
-        "def clasificacion_pl(A,B):\n",
+        "def clasificacion_pl(A, B):\n",
         "  ya = 1\n",
         "  yb = -1\n",
         "\n",
@@ -188,7 +185,7 @@
         "\n",
         "  "
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -208,14 +205,14 @@
           "height": 255
         },
         "id": "3uZJtN35NtAH",
-        "outputId": "e956f6d8-e6c9-4829-8e59-5e3c9b6b6f8c"
+        "outputId": "c90ce622-10d1-44a6-ae7b-169f027abbd6"
       },
       "source": [
         "df = pd.read_csv(('/content/drive/MyDrive/Datos/img_cancer_26x26pixeles_con_etiqueta.csv'))\r\n",
         "print(df.shape)\r\n",
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +766,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 8
         }
       ]
     },
@@ -780,12 +777,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ni83Pk8hO_gT",
-        "outputId": "72d1afcc-42e6-46f5-8114-d277a98e8c2a"
+        "outputId": "09a79ed6-818b-4d39-eee8-a86322cb7161"
       },
       "source": [
         "df['clase'].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -799,7 +796,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 9
         }
       ]
     },
@@ -810,13 +807,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QGegG9JxPpsS",
-        "outputId": "9d4d2d66-a365-4f4c-ffdc-c7b41c47ec1e"
+        "outputId": "0517aa98-775d-4c94-bdd1-ef34540700ca"
       },
       "source": [
         "df.loc[df['clase']==0,'clase']=-1\r\n",
         "df['clase'].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -830,7 +827,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 11
         }
       ]
     },
@@ -841,11 +838,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9H6gCpEJuOUf",
-        "outputId": "5b243966-98df-4cf2-b539-c36151c18ce8"
+        "outputId": "42226cfd-1704-4aaa-e378-211173585b1a"
       },
       "source": [
         "#El método GroupBy de Pandas separa un data frame en varios data frames\r\n",
-        "por_clase =df.groupby('clase')\r\n",
+        "por_clase = df.groupby('clase')\r\n",
         "\r\n",
         "#trabajaremos con la misma cantidad de datos de una clase que de otra\r\n",
         "S = por_clase.get_group(-1)\r\n",
@@ -854,7 +851,7 @@
         "\r\n",
         "datos['clase'].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +865,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 12
         }
       ]
     },
@@ -879,7 +876,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3a9EZ87MJiou",
-        "outputId": "6e4342a9-7e4e-472c-f4ab-ff6b0edd7eb2"
+        "outputId": "d9b324f0-2937-4fbd-c302-0d66e5a0bf57"
       },
       "source": [
         "# Separar en conjunto de entrenamiento y conjunto de prueba\r\n",
@@ -892,7 +889,7 @@
         "  print(dat.shape)\r\n",
         "  print(dat['clase'].value_counts(),'\\n')"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,11 +916,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TncwVK71YCDR",
-        "outputId": "f9e00c89-ebaa-4f78-b618-0eb4b58db1c7"
+        "outputId": "b1a00ce4-7ac2-45df-f0ee-4f9710a0b7a5"
       },
       "source": [
         "  #El método GroupBy de Pandas separa un data frame en varios data frames\r\n",
-        "  por_clase =entrenamiento.groupby('clase')\r\n",
+        "  por_clase = entrenamiento.groupby('clase')\r\n",
         "\r\n",
         "  #separamos los dataframes de acuerdo a la clase \r\n",
         "  #eliminamos la etiqueta\r\n",
@@ -935,7 +932,7 @@
         "print(type(C), type(S), '\\n')\r\n",
         "print(C.shape,  S.shape )"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1379,13 +1376,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac037ec3-3bb5-4c9b-ccbe-ac74342a1ff6"
+        "outputId": "1518eb8e-0249-48d6-fe61-3e9246fa8857"
       },
       "source": [
         "\r\n",
-        "%time betas = clasificacion_pl(C,S)"
+        "%time betas = clasificacion_pl(C, S)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,8 +1391,8 @@
             "Cantidad de restricciones = 2057\n",
             "Solución:\n",
             "Valor objetivo = 0.0\n",
-            "CPU times: user 1min 24s, sys: 381 ms, total: 1min 24s\n",
-            "Wall time: 1min 24s\n"
+            "CPU times: user 1min 23s, sys: 309 ms, total: 1min 23s\n",
+            "Wall time: 1min 23s\n"
           ],
           "name": "stdout"
         }
